Added activity->createActivity services,data-mem,web-api(routes) and its service tests and its documentation TODO("the integration tests")
